@@ -398,26 +398,12 @@ def filter_suite_by_re(suite, pattern):
     result = TestUtil.TestSuite()
     filter_re = re.compile(pattern)
     for test in iter_suite_tests(suite):
-        if filter_re.match(test.id()):
+        if filter_re.search(test.id()):
             result.addTest(test)
     return result
 
 
-def filter_suite_by_names(suite, wanted_names):
-    """Return a new suite containing only selected tests.
-    
-    Names are considered to match if any name is a substring of the 
-    fully-qualified test id (i.e. the class ."""
-    result = TestSuite()
-    for test in iter_suite_tests(suite):
-        this_id = test.id()
-        for p in wanted_names:
-            if this_id.find(p) != -1:
-                result.addTest(test)
-    return result
-
-
-def run_suite(suite, name='test', verbose=False, pattern=".*", testnames=None):
+def run_suite(suite, name='test', verbose=False, pattern=".*"):
     TestCaseInTempDir._TEST_NAME = name
     if verbose:
         verbosity = 2
@@ -426,8 +412,6 @@ def run_suite(suite, name='test', verbose=False, pattern=".*", testnames=None):
     runner = TextTestRunner(stream=sys.stdout,
                             descriptions=0,
                             verbosity=verbosity)
-    if testnames:
-        suite = filter_suite_by_names(suite, testnames)
     if pattern != '.*':
         suite = filter_suite_by_re(suite, pattern)
     result = runner.run(suite)
@@ -442,10 +426,9 @@ def run_suite(suite, name='test', verbose=False, pattern=".*", testnames=None):
     return result.wasSuccessful()
 
 
-def selftest(verbose=False, pattern=".*", testnames=None):
+def selftest(verbose=False, pattern=".*"):
     """Run the whole test suite under the enhanced runner"""
-    return run_suite(test_suite(), 'testbzr', verbose=verbose, pattern=pattern,
-                     testnames=testnames)
+    return run_suite(test_suite(), 'testbzr', verbose=verbose, pattern=pattern)
 
 
 def test_suite():
